k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ippmis-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: ippmis-backend

  template:
    metadata:
      labels:
        app: ippmis-backend

    spec:
      containers:
      - name: ippmis-backend

        image: ippmis-backend:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 3000
