k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ippmis-backend

spec:
  selector:
    app: ippmis-backend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
