k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ippmis-frontend

spec:
  selector:
    app: ippmis-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
