k8s/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ippmis-postgres

spec:
  selector:
    app: ippmis-postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
