k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ippmis-ingress

spec:
  rules:
  - host: ippmis.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: ippmis-frontend

            port:
              number: 80
